# workflow-container-developer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.superpowers/sdd/: task-5-report.md
doc/design/: workflow-container-authoring.md
doc/goal/: 2026-07-14-goal-brainstorm.md
doc/spec/: 2026-07-14-goal-brainstorm.md
doc/superpowers/plans/: 2026-07-03-workflow-container-runtime-extraction.md  2026-07-04-workflow-container-skill-audit.md
doc/superpowers/specs/: 2026-07-03-workflow-container-developer-design.md  2026-07-04-workflow-container-skill-audit-design.md
plugins/workflow-container-tools/.codex-plugin/: plugin.json
plugins/workflow-container-tools/skills/goal-brainstorm/: SKILL.md
plugins/workflow-container-tools/skills/goal-brainstorm/references/: specification-contract.md
plugins/workflow-container-tools/skills/workflow-container-audit/: SKILL.md
plugins/workflow-container-tools/skills/workflow-container-developer/: SKILL.md
plugins/workflow-container-tools/skills/workflow-container-developer/references/: workflow-container-authoring.md
test/: test_audit.py  test_cli.py  test_package.py  test_plugin_skills.py  test_project.py
workflow_container_developer/: __init__.py  audit.py  cli.py  project.py
