[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "workflow-container-developer"
version = "0.1.0"
description = "Developer workspace and generic tooling for adjacent workflow-container projects"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "PyYAML>=6.0.2",
  "pytest>=8.4.0",
]

[project.scripts]
workflow-container-dev = "workflow_container_developer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["workflow_container_developer"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
